Mention QTCREATOR_WITH_QML environment variable in README
We disabled the visible parts of the Qml support by default for the 2.0
release. Defining QTCREATOR_WITH_QML brings it back.

This hack should be removed as soon as 2.0 is shipped.

Reviewed-by: Daniel Molkentin
(cherry picked from commit b27dbd26d9a20ea1d190e1dd02decd40f3dc692a)

--- a/README
+++ b/README
@@ -26,6 +26,12 @@ cd $BUILD_DIRECTORY
 qmake $SOURCE_DIRECTORY/qtcreator.pro
 make (or mingw32-make or nmake or jom, depending on your platform)
 
+Qml Support
+-----------
+
+Define the QTCREATOR_WITH_QML environment variable to enable Qml support
+(before running qmake).
+
 QmlDesigner, QmlInspector require private headers
 -------------------------------------------------
 
