--- a/src/plugins/git/TODO.txt
+++ b/src/plugins/git/TODO.txt
@@ -1,4 +1,4 @@
-- Make texts translateable
+- Make texts translatable
 - Do not use QErrorMessage, Creator standard error instead?
 Commands:
  - P2:
