--- a/share/qtcreator/translations/README
+++ b/share/qtcreator/translations/README
@@ -3,12 +3,14 @@ How To add translations to Qt Creator
 
 - Coordinate over the mailing list to avoid duplicate work.
 
+- Read the instructions at http://qt.gitorious.org/qt/pages/QtLocalization
+
 - Add your language to the LANGUAGES line in translations.pro.
   Don't qualify it with a country unless it is reasonable to expect
   country-specific variants.
   Skip this step if updating an existing translation, obviously.
 
-- Run "make ts".
+- Run "make ts-<lang>".
 
   If your Qt version is too old, you may create a template by running
     lconvert --drop-translations qtcreator_de.ts -o qtcreator_<yours>.ts
